[package]
name = "lnurl-rs"
version = "0.1.2"
edition = "2021"
authors = ["Ben Carman <benthecarman@live.com>"]
license = "MIT"
homepage = "https://github.com/benthecarman/lnurl-rs/"
repository = "https://github.com/benthecarman/lnurl-rs/"
readme = "README.md"
documentation = "https://docs.rs/lnurl-rs/"
description = "A basic LNURL implementation in Rust"
keywords = [ "lightning", "bitcoin" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lnurl"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bech32 = "0.9.1"
bitcoin_hashes = { version = "0.11", default-features = false }
bitcoin = { version = "0.29.2", features = ["serde"] }
ureq = { version = "2.5.0", features = ["json"], optional = true }
reqwest = { version = "0.11", optional = true, default-features = false, features = ["json"] }
lightning-invoice = { version = "0.21.0" }
email_address = "0.2.4"

[dev-dependencies]
tokio = { version = "1.20.1", features = ["full"] }

[features]
default = ["blocking", "async", "async-https"]
blocking = ["ureq", "ureq/socks"]
async = ["reqwest", "reqwest/socks"]
async-https = ["reqwest/default-tls"]
