[package]
name = "lnurl-rs"
version = "0.6.0"
edition = "2018"
authors = ["Ben Carman <benthecarman@live.com>"]
license = "MIT"
homepage = "https://github.com/benthecarman/lnurl-rs/"
repository = "https://github.com/benthecarman/lnurl-rs/"
readme = "README.md"
documentation = "https://docs.rs/lnurl-rs/"
description = "A basic LNURL implementation in Rust"
keywords = ["lightning", "bitcoin", "lnurl"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "lnurl"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.70"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bech32 = "0.11"
bitcoin = { version = ">=0.30.2 <0.33.0", default-features = false, features = ["no-std", "serde", "rand"] }
ureq = { version = "2.5.0", features = ["json"], optional = true }
reqwest = { version = "0.12.3", optional = true, default-features = false, features = ["json"] }
email_address = "=0.2.5"
url = { version = "2.3.1", features = ["serde"] }
base64 = "0.22.0"
cbc = { version = "0.1", features = ["alloc"] }
aes = { version = "0.8" }

[dev-dependencies]
tokio = { version = "1.20.1", features = ["full"] }
bitcoin = { version = ">=0.30.2 <0.33.0", features = ["serde", "std"] }
lightning-invoice = { version = "0.27.0", features = ["std", "serde"] }
nostr = { version = "0.25.0", default-features = false, features = ["std"] }

[features]
default = ["blocking", "async", "async-https"]
blocking = ["ureq", "ureq/socks"]
async = ["reqwest", "reqwest/socks"]
async-https = ["reqwest/default-tls", "async"]
